--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "ptjulia",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9000",
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.2.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.2",
+    "axios": "^0.26.1",
+    "moment": "^2.29.2",
+    "node-sass": "^7.0.1",
+    "pdf-viewer-reactjs": "^2.2.3",
+    "pdfjs-dist": "^2.13.216",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-highlight-words": "^0.17.0",
+    "react-pdf": "^5.7.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
