--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.2",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "moment": "^2.29.2",
     "node-sass": "^7.0.1",
     "pdf-viewer-reactjs": "^2.2.3",
     "pdfjs-dist": "^2.13.216",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-highlight-words": "^0.17.0",
     "react-pdf": "^5.7.2",
