--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "firebase": "^9.9.2",
     "moment": "^2.29.2",
     "node-sass": "^7.0.1",
     "pdf-viewer-reactjs": "^2.2.3",
